@@ -600,13 +600,14 @@
 #define ID_OPTIONS_EMULATOR_SAVETYPE_EEPROMSENSOR 40173
 #define ID_OPTIONS_EMULATOR_SAVETYPE_FLASH512K 40174
 #define ID_OPTIONS_EMULATOR_SAVETYPE_FLASH1M 40175
+#define ID_OPTIONS_EMULATOR_AUTOMATICALLYIPSPATCH 40176
 
 // Next default values for new objects
 // 
 #ifdef APSTUDIO_INVOKED
 #ifndef APSTUDIO_READONLY_SYMBOLS
 #define _APS_NEXT_RESOURCE_VALUE        140
-#define _APS_NEXT_COMMAND_VALUE         40176
+#define _APS_NEXT_COMMAND_VALUE         40177
 #define _APS_NEXT_CONTROL_VALUE         1240
 #define _APS_NEXT_SYMED_VALUE           102
 #endif
